Fix broken css

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -115,7 +115,7 @@
 /*
 * Menu
 */
-.NLT__menu-container {
+.NLT__clickable {
 	position: relative;
 }
 
